; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@FLED_CAPS_H = common dso_local global i32 0, align 4
@FLED_CAPS_S = common dso_local global i32 0, align 4
@fled_val = common dso_local global i32 0, align 4
@fleds = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %5 = shl i32 1, %4
  %6 = and i32 %3, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @FLED_CAPS_H, align 4
  %10 = load i32, i32* @FLED_CAPS_S, align 4
  %11 = load i32, i32* @fled_val, align 4
  %12 = load i32*, i32** @fleds, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = call i32 @sethsv(i32 %9, i32 %10, i32 %11, i32* %13)
  br label %19

15:                                               ; preds = %1
  %16 = load i32*, i32** @fleds, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = call i32 @setrgb(i32 0, i32 0, i32 0, i32* %17)
  br label %19

19:                                               ; preds = %15, %8
  %20 = call i32 (...) @rgblight_set()
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @led_set_user(i32 %21)
  ret void
}

declare dso_local i32 @sethsv(i32, i32, i32, i32*) #1

declare dso_local i32 @setrgb(i32, i32, i32, i32*) #1

declare dso_local i32 @rgblight_set(...) #1

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
